--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -1,4 +1,4 @@
-name: Build, Push and Deploy Backend Shortener
+name: Build, Push and Deploy Frontend Shortener
 
 on:
   push:
@@ -16,10 +16,10 @@ jobs:
         run: echo "${{ secrets.DOCKER_PASSWORD }}" | docker login -u "${{ secrets.DOCKER_USERNAME }}" --password-stdin
 
       - name: Build image
-        run: docker build -t seuuser/url-backend:latest .
+        run: docker build -t zadicao/frontend-shortener:latest .
 
       - name: Push image
-        run: docker push seuuser/url-backend:latest
+        run: docker push zadicao/frontend-shortener:latest
 
   deploy:
     needs: build
