--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -16,7 +16,7 @@ jobs:
         run: echo "${{ secrets.DOCKER_PASSWORD }}" | docker login -u "${{ secrets.DOCKER_USERNAME }}" --password-stdin
 
       - name: Build image
-        run: docker build -t zadicao/frontend-shortener:latest .
+        run: docker build -t zadicao/frontend-shortener:latest --build-arg VITE_API_URL=${{ secrets.VITE_API_URL }} --build-arg VITE_API_KEY=${{ secrets.VITE_API_KEY }} .
 
       - name: Push image
         run: docker push zadicao/frontend-shortener:latest
